<resources>
    <string name="app_name">Soccer News</string>
    <string name="title_news">News</string>
    <string name="title_favorites">Favorites</string>
    <string name="cd_news_image">News image</string>
    <string name="title">card_tittle</string>
    <string name="supporting_text">supporting_text</string>
    <string name="txt_open_link">OPEN LINK</string>
    <string name="cd_share_icon">Share icon</string>
    <string name="cd_favorite_icon">Favorite icon</string>
    <string name="error_network">Network error.</string>
</resources>