<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <!-- Media -->

        <ImageView
            android:id="@+id/ivThumbnail"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:contentDescription="@string/cd_news_image"
            app:srcCompat="@drawable/media"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <!-- Title, secondary and supporting text -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@string/title"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivThumbnail"
            tools:text="Ferroviária vence Palmeiras" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@string/supporting_text"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            tools:text="As meninas da ferrinha derrotaram o Palmeiras no último domingo" />

        <!-- Buttons -->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btOpenLink"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="8dp"
            android:text="@string/txt_open_link"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescription"/>

        <ImageView
            android:id="@+id/ivFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_favorite"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@id/btOpenLink"
            app:layout_constraintEnd_toStartOf="@id/ivShare"
            app:layout_constraintTop_toTopOf="@id/btOpenLink"
            android:contentDescription="@string/cd_favorite_icon" />

        <ImageView
            android:id="@+id/ivShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            app:layout_constraintBottom_toBottomOf="@id/btOpenLink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/btOpenLink"
            app:srcCompat="@drawable/ic_share"
            android:contentDescription="@string/cd_share_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
